# neo-slack-bot-production

./: .clang-format  .clang-tidy  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: INDEX.md  api-documentation.md  audit-report-code-quality.md  audit-report-executive.md  audit-report-security-testing.md  auth-advanced.md  auth-basic.md  codebase-review-architecture.md  codebase-review-testing.md  codebase-review.md  coverage.md  development-setup.md  docker-setup.md  docker-usage.md  docker.md  examples-building.md  examples-descriptions.md  examples.md  external-libs-detailed.md  external-libs-overview.md  features-core.md  features-detailed.md  features-overview.md  features-platform.md  features-technical.md  getting-slack-token-detailed-setup.md  getting-slack-token-detailed-usage.md  getting-slack-token-detailed.md  getting-slack-token-quick.md  gui-tool-architecture-detailed.md  gui-tool-architecture-overview.md  installation-build.md  installation-setup.md  installation.md  linux-support.md  manual-testing-guide-advanced.md  manual-testing-guide-scenarios-advanced.md  manual-testing-guide-scenarios-basic.md  manual-testing-guide-setup.md  manual-testing-guide.md  (+47 more)
examples/: CMakeLists.txt  README.md  add_bot_to_channel.cpp  basic_bot.cpp  channel_management.cpp  custom_handler.cpp  http_api_example.cpp  two_bots_keychain.cpp
examples/bot_network_module/: bot_network.cpp  bot_network.hpp  bot_network_rate_limiter.cpp  bot_network_rate_limiter.hpp  bot_network_workers.cpp  main.cpp  system_utils.cpp  system_utils.hpp
scripts/: check-file-sizes.sh  coverage.sh  format.sh  install-launchd.sh  lint.sh  uninstall-launchd.sh
src/: CMakeLists.txt  command_handler.cpp  command_handler.hpp  config_loader.cpp  config_loader.hpp  config_loader_defaults.cpp  error_recovery.cpp  error_recovery.hpp  event_parser.cpp  event_parser.hpp  example_runtime.cpp  http_client.cpp  http_client.hpp  input_validator.cpp  input_validator.hpp  json_parser.cpp  json_parser.hpp  logger.cpp  logger.hpp  macos_notifications.cpp  macos_notifications.hpp  main.cpp  main.hpp  main_init.cpp  message_filter.cpp  message_filter.hpp  metrics.cpp  metrics.hpp  metrics_summary.cpp  notifications_factory.cpp  notifications_factory.hpp  rate_limiter.cpp  rate_limiter.hpp  settings.cpp  settings.hpp  slack_api.cpp  slack_api.hpp  slack_api_core.cpp  system_metrics_factory.cpp  system_metrics_factory.hpp  (+8 more)
src/include/: httplib.h
src/interfaces/: i_http_client.hpp  i_notification_service.hpp  i_system_metrics.hpp  i_websocket_client.hpp
src/platform/linux/: linux_notifications_impl.cpp  linux_notifications_impl.hpp  linux_system_metrics.cpp  linux_system_metrics.hpp
src/platform/macos/: macos_keychain_impl.cpp  macos_keychain_impl.hpp  macos_notifications_impl.cpp  macos_notifications_impl.hpp  macos_system_metrics.cpp  macos_system_metrics.hpp
src/platform/windows/: windows_notifications_impl.cpp  windows_notifications_impl.hpp  windows_system_metrics.cpp  windows_system_metrics.hpp
tests/: CMakeLists.txt  README.md  test_main.cpp
tests/benchmark/: test_benchmark.cpp
tests/e2e/: test_slack_e2e.cpp  test_slack_e2e_api.cpp  test_slack_e2e_components.cpp  test_slack_e2e_integration.cpp
tests/examples/: test_bot_network.cpp  test_channel_management.cpp
tests/integration/: test_integration.cpp  test_slack_integration.cpp
tests/mocks/: mock_http_client.hpp  mock_websocket_client.hpp
tests/performance/: test_performance.cpp  test_performance_advanced.cpp  test_performance_latency.cpp  test_performance_throughput.cpp
tests/security/: test_security.cpp  test_security_input.cpp  test_security_input_attacks.cpp  test_security_input_format.cpp  test_security_input_sanitization.cpp
tests/stress/: test_stress.cpp  test_stress_advanced.cpp  test_stress_components.cpp  test_stress_concurrent.cpp  test_stress_connection.cpp  test_stress_system.cpp
tests/unit/: test_bot_network_rate_limiter.cpp  test_command_handler.cpp  test_config_loader.cpp  test_error_recovery.cpp  test_event_parser.cpp  test_http_client.cpp  test_input_validator.cpp  test_json_parser.cpp  test_linux_notifications.cpp  test_logger.cpp  test_macos_notifications.cpp  test_message_filter_extended.cpp  test_metrics.cpp  test_rate_limiter.cpp  test_settings.cpp  test_slack_api.cpp  test_validator_limiter_boundaries.cpp  test_websocket.cpp
